# docs/swagger.json
@@ -128,7 +128,7 @@
                     "type": "string"
                 },
                 "created_on": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "device": {
                     "type": "string"
@@ -143,7 +143,7 @@
                     "type": "string"
                 },
                 "modified_on": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "os": {
                     "type": "string"
@@ -158,9 +158,6 @@
                     "type": "string"
                 },
                 "user_agent": {
-                    "type": "string"
-                },
-                "visit_time": {
                     "type": "string"
                 }
             }
